--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,9 @@
           "text": "-enable-pretty-printing",
           "ignoreFailures": true
         }
-      ]
+      ],
+      "preLaunchTask": "Start QEMU Debug Server",
+      "postDebugTask": ""
     }
   ]
 }
